fixed split verses alignment

--- a/app/styles/_tei.scss
+++ b/app/styles/_tei.scss
@@ -128,6 +128,10 @@ div.div {
 		margin-left: 34px;
 	}
 
+	/* &-indent-part:not(.l-hasLineN) {
+		margin-left: 68px;
+	} */
+
 	.lineN {
 		text-align: right;
 		color: grey;
